# Utilities

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  paths.cmake
cmake/: CMakeLists.txt  CMakePresets.json  c_vars.cmake  cmake_uninstall.cmake  cmake_vars.cmake  custom_vars.cmake  cxx_vars.cmake  dep_mgr.cmake
scripts/: getdistro.sh  git.sh  git_fetch.sh
shell/: pkgmgr.sh
templates/: cmake_uninstall.cmake.in
